# bruh2dEngine

./: .gitignore  CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: camera2d.c  camera2d.h  demo_scene.c  demo_scene.h  engine.c  engine.h  main.c  shader.c  shader.h  sprite_renderer.c  sprite_renderer.h  texture.c  texture.h
